Fixed filterInfo stretching

--- a/less/components/consonant/filters-info.less
+++ b/less/components/consonant/filters-info.less
@@ -125,6 +125,12 @@
     @media @consonant-for-desktop-up {
         min-width: calc(83.333vw - (@consonant-filters-1200-break-width + unit((@consonant-root-rem * 2), px)));
         max-width: calc(83.333vw - (@consonant-filters-1200-break-width + unit((@consonant-root-rem * 2), px)));
+
+        &_no-filter-panel {
+            min-width: 83.333vw;
+            max-width: 83.333vw;
+        }
+
         min-height: @consonant-filters-info-1200-break-height;
         margin-left: auto;
         margin-right: auto;
@@ -205,6 +211,11 @@
     @media @consonant-for-big-desktop-up {
         min-width: calc(@consonant-size-responsive-desktop - (@consonant-filters-1200-break-width + unit((@consonant-root-rem * 2), px)));
         max-width: calc(@consonant-size-responsive-desktop - (@consonant-filters-1200-break-width + unit((@consonant-root-rem * 2), px)));
+
+        &_no-filter-panel {
+            min-width: @consonant-size-responsive-desktop;
+            max-width: @consonant-size-responsive-desktop;
+        }
 
         .consonant-filters-info--title {
             max-width: @consonant-filters-info-title-1440-break-width;
